# Project-Deus-caritas-est

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
src/: Char.cpp  Char.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  main.cpp
src/SFMLsupport/: Fontbox.cpp  Fontbox.hpp  Textbox.cpp  Textbox.hpp
src/data/: mainMenu.txt
src/scenes/: Menu.cpp  Menu.hpp  Scene.cpp  Scene.hpp
test/: CMakeLists.txt  tests.cpp
